--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Registrar Entrada y Salida de Turno",
-  "short_name": "Registrar E/S",
+  "name": "Registrar Salida de Turno",
+  "short_name": "Registrar Salida",
   "icons": [{
     "src": "images/icons/icon-128x128.png",
       "sizes": "128x128",
